# qgpt-quiz-game

./: .gitmodules  CMakeLists.txt  README.md
qml/: CMakeLists.txt
qml/qgpt/: CMakeLists.txt  qgpt.qml  qgptcontroller.cpp  qgptcontroller.h
src/: CMakeLists.txt
